--- a/src/content/graphos/basics/operations/persisted-queries.mdx
+++ b/src/content/graphos/basics/operations/persisted-queries.mdx
@@ -231,7 +231,9 @@ See the instructions for your client library:
 
 ##### Apollo Kotlin
 
-To generate an operation manifest with Apollo Kotlin, you modify your project's [Gradle plugin configuration](/kotlin/advanced/plugin-configuration) to generate a manifest instead of standard Kotlin source for your operations:
+> Manifest generation requires Apollo Kotlin `3.8.2` or later.
+
+To generate an operation manifest with Apollo Kotlin, you modify your project's [Gradle plugin configuration](/kotlin/advanced/plugin-configuration) to generate a manifest in addition to standard Kotlin source for your operations:
 
 ```kotlin
 apollo {
@@ -242,6 +244,8 @@ apollo {
 ```
 
 ##### Apollo iOS
+
+> Manifest generation requires Apollo iOS `1.3.1` or later.
 
 To generate an operation manifest with Apollo iOS, you use the same [code generation engine](/ios/code-generation/introduction) that you use to generate Swift code for each of your operations.
 
@@ -598,7 +602,7 @@ By generating identifiers based on query documents this way, you ensure that dif
 
 Whenever a client sends an operation string to a router that has safelisting enabled, the router checks for that operation string's presence in its persisted query list. **The incoming string must match a PQL entry's operation string _exactly_, including whitespace and field order.**
 
-The following queries are functionally identical, but the router will _reject_ the client operation because it doesn't match the PQL entry exactly.
+The following queries are functionally identical, but the router will _reject_ the client operation because it doesn't match the PQL entry exactly:
 
 <CodeColumns>
 
@@ -624,13 +628,33 @@ query GetBooks {
 
 </CodeColumns>
 
+To ensure that you generate manifest entries correctly, it's important to note that your app's client library might potentially _modify_ the operation strings you define in your source before executing those corresponding operations. For example, by default all Apollo Client libraries add the `__typename` field to every object in a query (if that field isn't already present):
 
-Apollo Client libraries can all potentially modify the operations they define in app. This means that the operations they define will be potentially different from the operations that are executed at runtime.
+<CodeColumns>
 
-For example, the client libraries typically add a `__typename`  field to every object type in the operation in order to understand more information about the operation's result. It's important that these changes are reflected in the published operations as well. Otherwise, two kinds of issues may occur:
+```graphql title="Source-defined query"
+query GetBooks {
+  books {
+    author
+    title
+  }
+}
+```
 
-- If a client's operation is published without the added `__typename` and the client sends the operation's ID in its request, the server will return results that do not include the `__typename` fields that the client was expecting. This will break the client features that need to know the type information.
+```graphql title="Client-executed query"
+query GetBooks {
+  books {
+    author
+    title
+    __typename #highlight-line
+  }
+}
+```
 
-- If a client's operation is published without the added `__typename` and the client sends the operation as a raw GraphQL document, then if the Router is configured to reject raw GraphQL that does not match a published operation, the operation may be surprisingly rejected. (We expect the "matching" rules to be configurable here, so that this particular "unexpected extra `__typename`" case could be made to work, but this may not cover all possible client-side transformations.)
+</CodeColumns>
 
-Apollo's clients use the same logic to transform operations at runtime and at build time, so that this is not a concern.
+> The [manifest generation tools](#3-generate-client-operation-manifests) for Apollo Client libraries all account for this default behavior.
+
+If you're building your own manifest generation tool, make sure it accounts for any such operation changes in your chosen client library. Otherwise, the router will reject your app's operations due to a query string mismatch.
+
+Similarly, if your clients execute operations by providing their PQL-specified ID, they might end up executing an operation with a different shape than expected if you don't account for these operation changes.
