--- a/src/content/graphos/delivery/schema-linter.mdx
+++ b/src/content/graphos/delivery/schema-linter.mdx
@@ -80,6 +80,7 @@ You can create custom linter rules to forbid or require certain strings as the p
 - Objects
 - Interfaces
 - Inputs
+- Arguments
 - Enums
 - Unions
 
